refactor card para evitar desbordamiendo de link .a

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -66,8 +66,7 @@
                     </div>
 
                     <div class="col-lg-5">
-                        <img src="./assets/profile1.jpg"
-                            class="img-fluid custom-photo" alt="">
+                        <img src="./assets/profile1.jpg" class="img-fluid custom-photo" alt="Foto perfil">
                     </div>
 
 
@@ -82,101 +81,123 @@
 
 
 <div class="container-fluid">
-
     <div class="row justify-content-center">
         <div class="horizontal-bars"></div>
         <h1 class="text-center mb-5 roboto-medium-italic mt-5">Conoce mis proyectos.</h1>
-        <div class="col">
-            <a target="_blank"  href="https://bitebooking-frontend.vercel.app/home-logout">
-                <div class="card"
-                    style="background-image: url('https://i.ibb.co/d2mNPpP/Captura-de-pantalla-2024-04-28-111137.png');">
-                    <svg viewBox="0 0 24 24"
-                        xmlns="https://i.ibb.co/d2mNPpP/Captura-de-pantalla-2024-04-28-111137.png"></svg>
-                    <div class="card__content ">
+
+        <div class="col-md-4">
+
+            <div class="card"
+                style="background-image: url('https://i.ibb.co/d2mNPpP/Captura-de-pantalla-2024-04-28-111137.png');">
+
+                <a target="_blank" href="https://bitebooking-frontend.vercel.app/home-logout">
+                    <div class="card__content">
                         <p class="card__title">BiteBooking.</p>
                         <p class="card__description">Plataforma destinada a la gestion de reservas en el sector de
                             hostelería, fue desarrollada full stack por el equipo de Fundación Adecco. Cuenta con
                             tecnologias como Java Spring para el backend y Angular para el Frontend.</p>
                     </div>
-                </div>
-            </a>
+                </a>
 
+            </div>
 
         </div>
-        <div class="col">
-            <a target="_blank"  href="https://jehiell.github.io/landing-page-curso/">
-                <div class="card "
-                    style="background-image: url('https://i.ibb.co/jyWYGnM/Captura-de-pantalla-2024-04-30-155108.png');">
-                    <svg viewBox="0 0 24 24"
-                        xmlns="https://i.ibb.co/jyWYGnM/Captura-de-pantalla-2024-04-30-155108.png"></svg>
+
+        <div class="col-md-4">
+            <div class="card"
+                style="background-image: url('https://i.ibb.co/jyWYGnM/Captura-de-pantalla-2024-04-30-155108.png');">
+                <a target="_blank" href="https://jehiell.github.io/landing-page-curso/">
                     <div class="card__content">
                         <p class="card__title">Curso landing page.</p>
                         <p class="card__description mb-1">Realizado al principio del curso, su finalidad es simple, pero
                             poderosa, conectar todos los proyectos al terminar el curso, todos los estudiantes de la
                             fundación Adecco estan invitados a participar.</p>
                     </div>
-                </div>
-            </a>
+
+                </a>
+
+            </div>
 
         </div>
-        <div class="col">
-            <a target="_blank"  href="https://tech-chef.vercel.app/">
-                <div class="card "
-                    style="background-image: url('https://i.ibb.co/tJz4KhR/company.png');">
-                    
+
+        <div class="col-md-4">
+
+            <div class="card" style="background-image: url('https://i.ibb.co/tJz4KhR/company.png');">
+                <a target="_blank" href="https://tech-chef.vercel.app/">
                     <div class="card__content">
                         <p class="card__title">Tech Chef Company.</p>
-                        <p class="card__description mb-1">Con nuestro sueño hecho realidad, Tech Chef aspira a revolucionar la industria hostelera en España, llevándola hacia un entorno digital. ¡Esta es nuestra startup!</p>
+                        <p class="card__description mb-1">Con nuestro sueño hecho realidad, Tech Chef aspira a
+                            revolucionar la industria hostelera en España, llevándola hacia un entorno digital. ¡Esta es
+                            nuestra startup!</p>
                     </div>
-                </div>
-            </a>
+
+                </a>
+
+            </div>
 
         </div>
-        <div class="col">
-            <a target="_blank"  href="https://jehiell.github.io/">
-                <div class="card"
-                    style="background-image: url('https://i.ibb.co/fFPNtxy/Captura-de-pantalla-2024-04-30-171615.png');">
-                    <svg viewBox="0 0 24 24"
-                        xmlns="https://i.ibb.co/jyWYGnM/Captura-de-pantalla-2024-04-30-155108.png"></svg>
+
+        <div class="col-md-4">
+            <div class="card"
+                style="background-image: url('https://i.ibb.co/fFPNtxy/Captura-de-pantalla-2024-04-30-171615.png');">
+                <a target="_blank" href="https://jehiell.github.io/">
                     <div class="card__content">
                         <p class="card__title">Antiguo portfolio.</p>
                         <p class="card__description">Te presento mi antiguo portfolio, realizado con HTML, Css y
                             Javascript, fue mi primer projecto dentro del desarrollo web, fue realizado de manera
                             empiríca, animado por un nuevo mundo que se habría paso.</p>
                     </div>
-                </div>
-            </a>
+                </a>
+
+            </div>
 
         </div>
+
+        <div class="col-md-4">
+            <div class="card" style="background-image: url('https://i.ibb.co/myVKvJg/42.png');">
+                <a target="_blank" href="https://jehiell.github.io/">
+                    <div class="card__content">
+                        <p class="card__title">Antiguo portfolio.</p>
+                        <p class="card__description">Te presento mi antiguo portfolio, realizado con HTML, Css y
+                            Javascript, fue mi primer projecto dentro del desarrollo web, fue realizado de manera
+                            empiríca, animado por un nuevo mundo que se habría paso.</p>
+                    </div>
+                </a>
+
+            </div>
+
+        </div>
+
     </div>
 </div>
+
 
 
 <div class="slider">
 
     <div class="slide-track">
-        <a target="_blank"  href="https://github.com/JehielL/bitebooking-frontend">
+        <a target="_blank" href="https://github.com/JehielL/bitebooking-frontend">
             <div class="slide">
                 <img src="https://avatars1.githubusercontent.com/u/139426?s=280&v=4" alt="">
 
             </div>
         </a>
 
-        <a target="_blank"  href="https://github.com/JehielL/oop-java-adecco">
+        <a target="_blank" href="https://github.com/JehielL/oop-java-adecco">
             <div class="slide">
                 <img src="https://www.vectorlogo.zone/logos/java/java-icon.svg" alt="">
 
             </div>
         </a>
 
-        <a target="_blank"  href="https://github.com/JehielL/java-spring">
+        <a target="_blank" href="https://github.com/JehielL/java-spring">
             <div class="slide">
                 <img src="https://cdn.worldvectorlogo.com/logos/spring-3.svg" alt="">
 
             </div>
         </a>
 
-        <a target="_blank"  href="https://github.com/JehielL/curso-java/tree/main/Python">
+        <a target="_blank" href="https://github.com/JehielL/curso-java/tree/main/Python">
 
             <div class="slide">
                 <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/cf/Python_logo_51.svg/1200px-Python_logo_51.svg.png"
@@ -185,7 +206,7 @@
             </div>
 
         </a>
-        <a target="_blank"   href="https://github.com/JehielL/curso-java/tree/main/SQL">
+        <a target="_blank" href="https://github.com/JehielL/curso-java/tree/main/SQL">
             <div class="slide">
                 <img src="https://www.vectorlogo.zone/logos/mysql/mysql-official.svg" alt="">
 
@@ -198,7 +219,7 @@
 
         </div>
 
-        <a target="_blank"  href="https://github.com/JehielL/bitebooking-frontend">
+        <a target="_blank" href="https://github.com/JehielL/bitebooking-frontend">
             <div class="slide">
                 <img src="https://icons.veryicon.com/png/o/business/vscode-program-item-icon/typescript-def.png" alt="">
 
@@ -271,14 +292,16 @@
             <h2 class="featurette-heading fw-normal mt-5">Futuros estudios. <span class="text-body-secondary">Up to
                     you.</span></h2>
             <p class="lead">Comprometido con mi crecimiento y estudios, este año 2024, he participado en las conocidas
-                <a target="_blank"  href="https://www.42madrid.com/" style="text-decoration: none; font-weight: 600; color:black">
+                <a target="_blank" href="https://www.42madrid.com/"
+                    style="text-decoration: none; font-weight: 600; color:black">
                     Piscinas</a>, del prestigioso campus 42 de Fundación Telefonica, donde me encuentro desarrollando
                 habilidades en el lenguaje C, como lo son: algoritmos, creación de funciones, gestión de memoría, linux,
                 cyberseguridad y muchisimos otros excitantes proyectos, te recomiendo visitar mi ultimo proyecto
                 realizado en <strong>42.</strong>
             </p>
 
-            <a target="_blank"  href="https://github.com/JehielL/libft"><button class="btn btn-outline-dark">Visitar ultimo proyecto
+            <a target="_blank" href="https://github.com/JehielL/libft"><button class="btn btn-outline-dark">Visitar
+                    ultimo proyecto
                     realizado.</button></a>
         </div>
         <div class="custom-icon col-md-3 mt-5">
@@ -303,11 +326,11 @@
         </div>
 
         <div class="col-md-6 order-md-1 justify-content-center align-items-center ">
-            <a target="_blank"  href="https://certidevs.com/">
+            <a target="_blank" href="https://certidevs.com/">
                 <img class="custom-img" src="https://i.ibb.co/RyPf8fF/certidevs-portada-formacion-removebg-preview.png"
                     alt="" style="max-width: 200px;">
             </a>
-            <a target="_blank" 
+            <a target="_blank"
                 href="https://www.canva.com/design/DAGECCz67b8/w1WmONl7eaku0hkMvuwixg/view?utm_content=DAGECCz67b8&utm_campaign=designshare&utm_medium=link&utm_source=editor">
                 <img class="custom-img"
                     src="https://fundacionadecco.org/wp-content/uploads/2017/05/logo-fundacion-adecco-discapacidad.png"
@@ -324,7 +347,8 @@
                     Chef.</span></h2>
             <p class="lead">Apostando por el talento, mis creencias y afianzado en que el futuro es ahora, he decidido
                 fundar
-                <a target="_blank"  href="https://www.42madrid.com/" style="text-decoration: none; font-weight: 600; color:black">
+                <a target="_blank" href="https://www.42madrid.com/"
+                    style="text-decoration: none; font-weight: 600; color:black">
                     Tech Chef</a>, con
                 el objetivo de avanzar el proceso de digitalización de la hostelería en España, realizando
                 investigaciones y desarrollos que lleven a una economía mas sostenible, apoyando y asesorando al
@@ -332,7 +356,7 @@
             </p>
 
             <div class="tooltip-container">
-                <a target="_blank"  href="https://tech-chef.vercel.app/">
+                <a target="_blank" href="https://tech-chef.vercel.app/">
                     <button class="btn btn-outline-dark text">Visita nuestra startup</button>
 
                 </a>>
@@ -365,11 +389,12 @@
         </div>
 
         <div class="col-md-6 order-md-1 justify-content-center align-items-center ">
-            <a target="_blank"  href="https://certidevs.com/">
-                <img class="custom-img img-profile" src="https://i.ibb.co/yY49sKh/Captura-de-pantalla-2024-06-11-003555.png"
-                    alt="" style="max-width: 330px;">
+            <a target="_blank" href="https://certidevs.com/">
+                <img class="custom-img img-profile"
+                    src="https://i.ibb.co/yY49sKh/Captura-de-pantalla-2024-06-11-003555.png" alt=""
+                    style="max-width: 330px;">
             </a>
-            
+
 
         </div>
     </div>
