--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -315,7 +315,7 @@ button span {
 
 .card {
   position: relative;
-  width: 300px;
+  width: 300px; 
   height: 200px;
   background: linear-gradient(-45deg, #f89b29 0%, #ff0f7b 100%);
   border-radius: 10px;
@@ -326,10 +326,31 @@ button span {
   transition: all 0.6s cubic-bezier(0.23, 1, 0.320, 1);
   background-position: center;
   background-size: cover;
-  background-repeat: no-repeat; 
+  background-repeat: no-repeat;
   margin: 20px auto;
   border: 0px !important;
+  pointer-events: auto;
 }
+.card a {
+  display: block;
+  padding: 0 !important; 
+  margin: 0 !important;
+  height: 100% !important;
+  width: 100% !important;
+  text-decoration: none;
+  color: inherit;
+
+}
+
+.card {
+  position: relative;
+  z-index: 1;
+}
+
+.card a:hover {
+  text-decoration: none;
+}
+
 
 
 
@@ -349,6 +370,7 @@ button span {
   width: 48px;
   fill: #333;
   transition: all 0.6s cubic-bezier(0.23, 1, 0.320, 1);
+  pointer-events: auto;
 }
 
 .card:hover {
@@ -370,6 +392,7 @@ button span {
   transition: all 0.6s cubic-bezier(0.23, 1, 0.320, 1);
   border-radius: 10px; 
   overflow: hidden;
+  pointer-events: none;
 }
 
 .card__content img {
@@ -407,7 +430,8 @@ button span {
   width: 100%;
   height: 100%;
   object-fit: cover; 
-  border-radius: 10px; 
+  border-radius: 10px;
+  pointer-events: none;
 }
 
 body {
