Agregado component projects42, finalizado.

--- a/src/app/blog-tech-about-me/blog-tech-about-me.component.html
+++ b/src/app/blog-tech-about-me/blog-tech-about-me.component.html
@@ -19,7 +19,7 @@
 
 </div>
 }@else {
-<div class="p-4 p-md-5 text-white rounded parallax">
+<div class="p-4 p-md-5 text-white parallax">
     <div class="col-md-6 px-0">
         <div class="overlay">
             <h1 class="display-4 fst-italic">From <span class="custom-name" style="font-weight: 500;">Ramen</span>
