--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -155,12 +155,10 @@
 
         <div class="col-md-4">
             <div class="card" style="background-image: url('https://i.ibb.co/myVKvJg/42.png');">
-                <a target="_blank" href="https://jehiell.github.io/">
+                <a routerLink="projects42">
                     <div class="card__content">
-                        <p class="card__title">Antiguo portfolio.</p>
-                        <p class="card__description">Te presento mi antiguo portfolio, realizado con HTML, Css y
-                            Javascript, fue mi primer projecto dentro del desarrollo web, fue realizado de manera
-                            empiríca, animado por un nuevo mundo que se habría paso.</p>
+                        <p class="card__title">42 Projects.</p>
+                        <p class="card__description">Podras conocer todos mis proyectos en 42 Campus, empezando por la libft una libreria de funciones, en lenguaje C, el ultimo realizado "So long", un video juego que nos ayuda aprender a dominar la minilibx, nuestra libreria grafica.</p>
                     </div>
                 </a>
 
