--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -393,6 +393,8 @@ button span {
   border-radius: 10px; 
   overflow: hidden;
   pointer-events: none;
+  
+  
 }
 
 .card__content img {
@@ -420,6 +422,9 @@ button span {
   font-size: 14px;
   color: #777;
   line-height: 1.4;
+  max-height: 60px;
+  text-overflow: ellipsis;
+
 }
 
 .card:hover svg {
