--- a/src/styles.css
+++ b/src/styles.css
@@ -7,8 +7,8 @@ body {
     font-family: Roboto, "Helvetica Neue", sans-serif;
     background-color: #f3f3f3;
     background-image: radial-gradient(#202030 0.7px, transparent 0.7px), radial-gradient(transparent, #f3f3f3 1px);
-    background-size: 20px 20px; /* Volver al tamaño original de los puntos */
-    background-position: 0 0, 5px 5px; /* Ajustar la posición de los puntos según el nuevo tamaño */
+    background-size: 20px 20px; 
+    background-position: 0 0, 5px 5px; 
 }
 
 .text-gradient {
