--- a/src/app/projects42/projects42.component.html
+++ b/src/app/projects42/projects42.component.html
@@ -39,9 +39,9 @@
     <div class="custom-main p-5 py-5">
         <div class="main-timeline-2">
             <div class="timeline-2 left-2">
-                <div class="card bg-dark text-light">
+                <div data-aos="fade-up" class="card bg-dark text-light">
                     <img src="./assets/intergalactic.jpg" class="card-img-top" alt="Responsive image">
-                    <div class="card-body p-4">
+                    <div  class="card-body p-4">
                         <h4 class="fw-bold mb-4">Libft | Funciones | C</h4>
                         <p class=" mb-4"><i class="far fa-clock" aria-hidden="true"></i> 2024</p>
                         <p class="mb-0">Pilar fundamental de nuestros futuros proyectos, nuestra libreria intergalactica
@@ -62,9 +62,9 @@
                 </div>
             </div>
             <div class="timeline-2 right-2">
-                <div class="card">
+                <div data-aos="fade-up" class="card">
                     <img src="./assets/gnl.jpg" class="card-img-top" alt="Responsive image">
-                    <div class="card-body p-4">
+                    <div  class="card-body p-4">
                         <h4 class="fw-bold mb-4">Get next line | C</h4>
                         <p class="text-muted mb-4"><i class="far fa-clock" aria-hidden="true"></i> 2024</p>
                         <p class="mb-0">"Leer una línea de un fd es demasiado aburrido...¿Por qué no leer múltiples
@@ -87,7 +87,7 @@
                 </div>
             </div>
             <div class="timeline-2 left-2">
-                <div class="card bg-dark text-light">
+                <div data-aos="fade-up" class=" card bg-dark text-light">
                     <img src="./assets/b2br.jpg" class="card-img-top" alt="Responsive image">
                     <div class="card-body p-4">
                         <h4 class="fw-bold mb-4">Born2BeRoot | Linux</h4>
@@ -100,7 +100,7 @@
                 </div>
             </div>
             <div class="timeline-2 right-2">
-                <div class="card">
+                <div data-aos="fade-up" class="card">
                     <img src="./assets/print.jpg" class="card-img-top" alt="ft_printf">
                     <div class="card-body p-4">
                         <h4 class="fw-bold mb-4"> Ft_printf | Funciones | C</h4>
@@ -121,7 +121,7 @@
                 </div>
             </div>
             <div class="timeline-2 left-2">
-                <div class="card bg-dark text-light">
+                <div data-aos="fade-up" class="card bg-dark text-light">
                     <img src="./assets/solong.png" class="card-img-top" alt="so long game">
                     <div class="card-body p-4">
                         <h4 class="fw-bold mb-4">So long | Videojuegos | C</h4>
@@ -142,7 +142,7 @@
                 </div>
             </div>
             <div class="timeline-2 right-2">
-                <div class="card">
+                <div data-aos="fade-up" class="card">
                     <img src="./assets/pipex.jpg" class="card-img-top" alt="Pipex">
                     <div class="card-body p-4">
                         <h4 class="fw-bold mb-4">Pipex | Programación | C</h4>
@@ -163,7 +163,7 @@
                 </div>
             </div>
             <div class="timeline-2 left-2">
-                <div class="card bg-dark text-light">
+                <div data-aos="fade-up" class="card bg-dark text-light">
                     <img src="./assets/pushswap.jpg" class="card-img-top" alt="Push swap">
                     <div class="card-body p-4">
                         <h4 class="fw-bold mb-4">Push Swap | Algoritmia | C</h4>
@@ -181,7 +181,7 @@
 
 
         </div>
-        <div class="imagegif image-fluid">
+        <div data-aos="fade-up" class="imagegif image-fluid">
             <img src="./assets/firegif.gif" alt="42" class="img-fluid">
         </div>
         <div class="text-white parallax">
