Agregado delay para mejorar animaciones.

--- a/src/app/projects42/projects42.component.html
+++ b/src/app/projects42/projects42.component.html
@@ -39,7 +39,7 @@
     <div class="custom-main p-5 py-5">
         <div class="main-timeline-2">
             <div class="timeline-2 left-2">
-                <div data-aos="fade-up" class="card bg-dark text-light">
+                <div data-aos="fade-up" data-aos-duration="1500" class="card bg-dark text-light">
                     <img src="./assets/intergalactic.jpg" class="card-img-top" alt="Responsive image">
                     <div  class="card-body p-4">
                         <h4 class="fw-bold mb-4">Libft | Funciones | C</h4>
@@ -62,7 +62,7 @@
                 </div>
             </div>
             <div class="timeline-2 right-2">
-                <div data-aos="fade-up" class="card">
+                <div data-aos="fade-up" data-aos-duration="1500" class="card">
                     <img src="./assets/gnl.jpg" class="card-img-top" alt="Responsive image">
                     <div  class="card-body p-4">
                         <h4 class="fw-bold mb-4">Get next line | C</h4>
@@ -87,7 +87,7 @@
                 </div>
             </div>
             <div class="timeline-2 left-2">
-                <div data-aos="fade-up" class=" card bg-dark text-light">
+                <div data-aos="fade-up" data-aos-duration="1500" class=" card bg-dark text-light">
                     <img src="./assets/b2br.jpg" class="card-img-top" alt="Responsive image">
                     <div class="card-body p-4">
                         <h4 class="fw-bold mb-4">Born2BeRoot | Linux</h4>
@@ -100,7 +100,7 @@
                 </div>
             </div>
             <div class="timeline-2 right-2">
-                <div data-aos="fade-up" class="card">
+                <div data-aos="fade-up" data-aos-duration="1500" class="card">
                     <img src="./assets/print.jpg" class="card-img-top" alt="ft_printf">
                     <div class="card-body p-4">
                         <h4 class="fw-bold mb-4"> Ft_printf | Funciones | C</h4>
@@ -121,7 +121,7 @@
                 </div>
             </div>
             <div class="timeline-2 left-2">
-                <div data-aos="fade-up" class="card bg-dark text-light">
+                <div data-aos="fade-up" data-aos-duration="1500" class="card bg-dark text-light">
                     <img src="./assets/solong.png" class="card-img-top" alt="so long game">
                     <div class="card-body p-4">
                         <h4 class="fw-bold mb-4">So long | Videojuegos | C</h4>
@@ -142,7 +142,7 @@
                 </div>
             </div>
             <div class="timeline-2 right-2">
-                <div data-aos="fade-up" class="card">
+                <div data-aos="fade-up" data-aos-duration="1500" class="card">
                     <img src="./assets/pipex.jpg" class="card-img-top" alt="Pipex">
                     <div class="card-body p-4">
                         <h4 class="fw-bold mb-4">Pipex | Programación | C</h4>
