--- a/src/app/projects42/projects42.component.html
+++ b/src/app/projects42/projects42.component.html
@@ -18,21 +18,24 @@
 
 </div>
 }@else{
-<div class="text-white parallax">
-    <div class="col-md-6 px-0">
-        <div class="overlay">
-            <h1 class="display-4 fst-italic text-center">A space trip in <span class="custom-name"
-                    style="font-weight: 400;"> 42 </span> <span class="custom-othername" style="font-weight: 400;">
-                    Campus Madrid.</span> <br>
+<div class="text-white custom-main">
+    <div class="parallax">
+        <div class="col-md-6 px-0">
+            <div class="overlay">
+                <h1 class="display-4 fst-italic text-center">A space trip in <span class="custom-name"
+                        style="font-weight: 400;"> 42 </span> <span class="custom-othername" style="font-weight: 400;">
+                        Campus Madrid.</span> <br>
 
-            </h1>
-            <p class="lead my-3 custom-text" style="font-weight: 400;"> <br>
-                El origen de la vida, el universo y todo lo demas...
-                <br>
-                Conoce todos y cada uno de mis proyectos como estudiante del campus 42.
-            </p>
+                </h1>
+                <p class="lead my-3 custom-text" style="font-weight: 400;"> <br>
+                    El origen de la vida, el universo y todo lo demas...
+                    <br>
+                    Conoce todos y cada uno de mis proyectos como estudiante del campus 42.
+                </p>
+            </div>
         </div>
     </div>
+
 
 </div>
 <div>
@@ -41,7 +44,7 @@
             <div class="timeline-2 left-2">
                 <div data-aos="fade-up" data-aos-duration="1500" class="card bg-dark text-light">
                     <img src="./assets/intergalactic.jpg" class="card-img-top" alt="Responsive image">
-                    <div  class="card-body p-4">
+                    <div class="card-body p-4">
                         <h4 class="fw-bold mb-4">Libft | Funciones | C</h4>
                         <p class=" mb-4"><i class="far fa-clock" aria-hidden="true"></i> 2024</p>
                         <p class="mb-0">Pilar fundamental de nuestros futuros proyectos, nuestra libreria intergalactica
@@ -64,7 +67,7 @@
             <div class="timeline-2 right-2">
                 <div data-aos="fade-up" data-aos-duration="1500" class="card">
                     <img src="./assets/gnl.jpg" class="card-img-top" alt="Responsive image">
-                    <div  class="card-body p-4">
+                    <div class="card-body p-4">
                         <h4 class="fw-bold mb-4">Get next line | C</h4>
                         <p class="text-muted mb-4"><i class="far fa-clock" aria-hidden="true"></i> 2024</p>
                         <p class="mb-0">"Leer una línea de un fd es demasiado aburrido...¿Por qué no leer múltiples
@@ -184,24 +187,27 @@
         <div data-aos="fade-up" class="imagegif image-fluid">
             <img src="./assets/firegif.gif" alt="42" class="img-fluid">
         </div>
-        <div class="text-white parallax">
-            <div class="col-md-6 px-0">
-                <div class="overlay">
-                    <h1 class="display-4 fst-italic text-center">The <span class="custom-name"
-                            style="font-weight: 400;">end?</span>
-                        <span class="custom-othername" style="font-weight: 400;">(for now).</span> <br>
-                    </h1>
-                    <p class="lead my-3 custom-text" style="font-weight: 400;"> <br>
-                        Hemos llegado al final de los proyectos realizados, es un camino emocionante y enriquecedor que
-                        apenas está comenzando. Día a día, les traeré actualizaciones sobre mi avance en
-                        <strong>42</strong>. Próximamente incluiremos guías de estudio para ayudarte en tu camino
-                        viajero intergaláctico. Gracias por llegar hasta aquí. Cualquier duda, no dudes en contactarme.
-                    </p>
+        <div class="text-white custom-main">
+            <div class="parallax">
+                <div class="col-md-6 px-0">
+                    <div class="overlay">
+                        <h1 class="display-4 fst-italic text-center">The <span class="custom-name"
+                                style="font-weight: 400;">end?</span>
+                            <span class="custom-othername" style="font-weight: 400;">(for now).</span> <br>
+                        </h1>
+                        <p class="lead my-3 custom-text" style="font-weight: 400;"> <br>
+                            Hemos llegado al final de los proyectos realizados, es un camino emocionante y enriquecedor que
+                            apenas está comenzando. Día a día, les traeré actualizaciones sobre mi avance en
+                            <strong>42</strong>. Próximamente incluiremos guías de estudio para ayudarte en tu camino
+                            viajero intergaláctico. Gracias por llegar hasta aquí. Cualquier duda, no dudes en contactarme.
+                        </p>
+                    </div>
                 </div>
             </div>
             
+
         </div>
-       
+
 
     </div>
 </div>
