--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -88,11 +88,11 @@
         <div class="col-md-4">
 
             <div class="card"
-                style="background-image: url('https://i.ibb.co/d2mNPpP/Captura-de-pantalla-2024-04-28-111137.png');">
+                style="background-image: url('https://i.postimg.cc/nLSqYn3s/Captura-de-pantalla-2025-04-10-155218.png');">
 
-                <a target="_blank" href="https://bitebooking-frontend.vercel.app/home-logout">
+                <a target="_blank" href="https://bitefood.es/">
                     <div class="card__content">
-                        <p class="card__title">BiteBooking.</p>
+                        <p class="card__title">Fudï.</p>
                         <p class="card__description">Plataforma destinada a la gestion de reservas en el sector de
                             hostelería, fue desarrollada full stack por el equipo de Fundación Adecco. Cuenta con
                             tecnologias como Java Spring para el backend y Angular para el Frontend.</p>
@@ -103,29 +103,13 @@
 
         </div>
 
-        <div class="col-md-4">
-            <div class="card"
-                style="background-image: url('https://i.ibb.co/jyWYGnM/Captura-de-pantalla-2024-04-30-155108.png');">
-                <a target="_blank" href="https://jehiell.github.io/landing-page-curso/">
-                    <div class="card__content">
-                        <p class="card__title">Curso landing page.</p>
-                        <p class="card__description mb-1">Realizado al principio del curso, su finalidad es simple, pero
-                            poderosa, conectar todos los proyectos al terminar el curso, todos los estudiantes de la
-                            fundación Adecco estan invitados a participar.</p>
-                    </div>
-
-                </a>
-
-            </div>
-
-        </div>
 
         <div class="col-md-4">
 
             <div class="card" style="background-image: url('https://i.ibb.co/tJz4KhR/company.png');">
-                <a target="_blank" href="https://tech-chef.vercel.app/">
+                <a target="_blank" href="https://bitesoftware.es/">
                     <div class="card__content">
-                        <p class="card__title">Tech Chef Company.</p>
+                        <p class="card__title">Bite Software.</p>
                         <p class="card__description mb-1">Con nuestro sueño hecho realidad, Tech Chef aspira a
                             revolucionar la industria hostelera en España, llevándola hacia un entorno digital. ¡Esta es
                             nuestra startup!</p>
