ajustada url bitesoftware

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -89,7 +89,7 @@
         <div class="col-md-4">
 
             <div class="card" style="background-image: url('https://i.ibb.co/tJz4KhR/company.png');">
-                <a target="_blank" href="https://bitesoftware.es/">
+                <a target="_blank" href="https://bitesoftware.vercel.app/">
                     <div class="card__content">
                         <p class="card__title">Bite Software.</p>
                         <p class="card__description mb-1">Con nuestro sueño hecho realidad, Tech Chef aspira a
