Ajustada url correctas para evitar links caidos.

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -108,7 +108,7 @@
             <div class="card"
                 style="background-image: url('https://i.postimg.cc/nLSqYn3s/Captura-de-pantalla-2025-04-10-155218.png');">
 
-                <a target="_blank" href="https://bitefood.es/">
+                <a target="_blank" href="https://fudimvp.vercel.app/">
                     <div class="card__content">
                         <p class="card__title">Fudï.</p>
                         <p class="card__description">Plataforma destinada a la gestion de reservas en el sector de
@@ -340,7 +340,7 @@
             </p>
 
             <div class="tooltip-container">
-                <a target="_blank" href="https://tech-chef.vercel.app/">
+                <a target="_blank" href="https://bitesoftware.vercel.app/">
                     <button class="btn btn-outline-dark text">Visita nuestra startup</button>
 
                 </a>>
